Redux for items done, setting up and fixing bugs for collection file incoming

--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,6 @@ add edit products
 secure routes
 add signle item fetch support
 add item filtering and sorting support in backend
+
+
+token za iteme dobijamo iz thunkAPI (const token = thunkAPI.getState().auth.user.token)
